About-us page activated, z-index error fixed, minor changes

--- a/small screens/about-us.css
+++ b/small screens/about-us.css
@@ -10,8 +10,8 @@ a{
     width: 384px;
     height: fit-content;
     border: black solid 15px;
-}*/
-/* container */
+} */
+/* container
 
 /* navigation top */
 .topnav{
@@ -67,75 +67,47 @@ main{
 margin-top: auto;
 }
 .div1{
-background-image: url(/images/EVE-17.jpg);
-filter:brightness(80%);
+background-image: url(/images/Background.jpg);
+filter:brightness(100%);
 background-size: cover;
-height: 250px;
-display: flex;
-align-items: center;
-justify-content: center;
 }
 .div1 p{
 color: white;
+padding: 3%;
+}
+.p1{
+padding-top: 5%;
 text-align: center;
 font-style: italic;
-font-size: large;
-filter:brightness(100%);
-filter: opacity(100%);
+font-size: xx-large;
 }
-/* Description */
-
-/* Event Planning */
-.div2{
-margin-top: 5%;
-padding-left: 4%;
+.p2{
+    padding-top:0.5%;
+    text-align: center;
 }
-.EventPlanningHeader{
-text-align: center;
-font-style: italic;
-font-size: x-large;
-font-weight: bold;
-}
-.EventPlanningImg1{
-margin: 4% 3% 0 0;
-width: 95%;
-background-image: url(/images/EVE-19.jpg);
-/* opacity: 0.5; */
-background-size: 100%;
-border-radius: 10px;
-}
-
-.EventPlanningImg1 p{
-    padding: 8% 8% 2% 8%;
-}
-.divInner{
+.bb{
+    margin: 10% 10% 0 10%;
     display: flex;
     justify-content: center;
-    padding-bottom: 9%;
 }
-.p02{
-    color: orange;
-    text-decoration: double;
-    border-radius: 8px;
-    padding: 3px 20px 3px 20px;
-    border: solid 1px orange;
-    border-width: 3px;
-    font-style: italic;
+.bb1{
+    margin-top: 9%;
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
 }
-.p02:hover{
-    color: white;
-    background-color: orange;
+.bbp{
+    display: flex;
+    justify-content: center;
 }
-/* Event Planning */
-
 
 /* footer */
 img{
     max-width: 100%;
     display: block;
-}
+    height: auto;}
 footer{
-    margin-top: 10%;
+    margin-top: 20%;
     background-color: rgba(255, 166, 0, 0.52);
 }
 .inner1{
